--- a/index.html
+++ b/index.html
@@ -7,32 +7,36 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <title>Star Wars RPG</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <div id="titlepage">
-        <h1>Star Wars</h1>
-        <h2>The RPG</h2>
+    <div id="titlepage" class="wordCard">
+        <h1 class="orangewords">Star Wars</h1>
+        <h2 class="orangewords">The RPG</h2>
     </div>
-    <div>
-        <h2>Choose your character:</h2>
-        <div id="characters">
-            <div id="cardOne" class="charcard">
-                <img src="assets/images/obiwan.jpg" />
-                <div class="title">Obi Wan Kenobi</div>
-            </div>
-            <div id="cardTwo" class="charcard">
-                <img src="assets/images/lukeskywalker.jpg" />
-                <div class="title">Luke Skywalker</div>
-            </div>
-            <div id="cardThree" class="charcard">
-                <img src="assets/images/vader.jpg" />
-                <div class="title">Darth Vader</div>
-            </div>
-            <div id="cardFour"  class="charcard">
-                <img src="assets/images/maul.jpg" />
-                <div class="title">Darth Maul</div>
-            </div>
-        </div>
+    <div id="charBar">
+        <ul>
+            <li><h2 class="wordCard orangewords">Choose your character:</h2></li>
+            <li><div id="characters">
+                    <div id="cardOne" class="charcard jedi">
+                        <img src="assets/images/obiwan.jpg" />
+                        <div class="title orangewords"><p>Obi Wan Kenobi</p></div>
+                    </div>
+                    <div id="cardTwo" class="charcard jedi">
+                        <img src="assets/images/lukeskywalker.jpg" />
+                        <div class="title orangewords"><p>Luke Skywalker</p></div>
+                    </div>
+                    <div id="cardThree" class="charcard sith">
+                        <img src="assets/images/vader.jpg" />
+                        <div class="title orangewords"><p>Darth Vader</p></div>
+                    </div>
+                    <div id="cardFour"  class="charcard sith">
+                        <img src="assets/images/maul.jpg" />
+                        <div class="title orangewords"><p>Darth Maul</p></div>
+                    </div>
+            </div></li>
+        </ul>
     </div>
+    <script src="assets/javascript/game.js"></script>
 </body>
 </html>
