--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <div id="titlepage" class="wordCard">
+    <div id="titlePage" class="wordCard">
         <h1 class="orangewords">Star Wars</h1>
         <h2 class="orangewords">The RPG</h2>
     </div>
@@ -19,20 +19,20 @@
             <li><h2 class="wordCard orangewords">Choose your character:</h2></li>
             <li><div id="characters">
                     <div id="cardOne" class="charcard jedi">
-                        <img src="assets/images/obiwan.jpg" />
-                        <div class="title orangewords"><p>Obi Wan Kenobi</p></div>
+                        <img src="assets/images/obiwan.jpg" class="one" />
+                        <div class="title orangewords charOne"><p>Obi Wan Kenobi</p></div>
                     </div>
                     <div id="cardTwo" class="charcard jedi">
-                        <img src="assets/images/lukeskywalker.jpg" />
-                        <div class="title orangewords"><p>Luke Skywalker</p></div>
+                        <img src="assets/images/lukeskywalker.jpg" class="two"/>
+                        <div class="title orangewords charTwo"><p>Luke Skywalker</p></div>
                     </div>
                     <div id="cardThree" class="charcard sith">
-                        <img src="assets/images/vader.jpg" />
-                        <div class="title orangewords"><p>Darth Vader</p></div>
+                        <img src="assets/images/vader.jpg" class="three"/>
+                        <div class="title orangewords charThree"><p>Darth Vader</p></div>
                     </div>
                     <div id="cardFour"  class="charcard sith">
-                        <img src="assets/images/maul.jpg" />
-                        <div class="title orangewords"><p>Darth Maul</p></div>
+                        <img src="assets/images/maul.jpg" class="four"/>
+                        <div class="title orangewords charFour"><p>Darth Maul</p></div>
                     </div>
             </div></li>
         </ul>
