clean up javascript

--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
     </div>
     <div id="charBar">
         <ul>
-            <li><h2 class="wordCard orangewords">Choose your character:</h2></li>
+            <li>
+                <h2 class="wordCard orangewords">Choose your character:</h2>
+                <h2 class="nowFight">Pick a foe!</h2>
+            </li>
             <li><div id="characters">
-                    <div id="cardOne" class="charcard jedi">
+                    <div id="cardOne" class="charcard jedi selection">
                         <img src="assets/images/obiwan.jpg" class="one" />
                         <div class="title orangewords charOne"><p>Obi Wan Kenobi</p></div>
                     </div>
-                    <div id="cardTwo" class="charcard jedi">
+                    <div id="cardTwo" class="charcard jedi selection">
                         <img src="assets/images/lukeskywalker.jpg" class="two"/>
                         <div class="title orangewords charTwo"><p>Luke Skywalker</p></div>
                     </div>
-                    <div id="cardThree" class="charcard sith">
+                    <div id="cardThree" class="charcard sith selection">
                         <img src="assets/images/vader.jpg" class="three"/>
                         <div class="title orangewords charThree"><p>Darth Vader</p></div>
                     </div>
-                    <div id="cardFour"  class="charcard sith">
+                    <div id="cardFour"  class="charcard sith selection">
                         <img src="assets/images/maul.jpg" class="four"/>
                         <div class="title orangewords charFour"><p>Darth Maul</p></div>
                     </div>
