--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li>
                     <h2 class="wordCard orangewords">Choose your character:</h2>
                     <h2 class="nowFight">Pick a foe!</h2>
+                    <h1 id="winOrLose"></h1>
                 </li>
                 <li><div id="characters">
                         <div id="cardOne" class="charcard jedi selection npc">
@@ -44,7 +45,7 @@
         <div id="fightWindow">
             <div id="charInfo">
                 <div id="fightingAs" class="charcard">
-                    <div class="title orangewords"><p>Me</p></div>
+                    <div class="title orangewords"><p></p></div>
                 </div>
                 <div class="vs">
                     <h1>VS</h1>
@@ -52,23 +53,21 @@
                 <div id="fightingAgainst" class="charcard">
                     <div id = "foe" class="title orangewords"><p></p></div>
                 </div>
+            </div>
+        </div>
+        <div id="lastThree">
             <div id="statsWindow">
-                <div id="yourStats">
+                <div id="yourStats" class="aDifferentFightWindow">
 
                 </div>
-                <div id="attackerStats">
+                <div id="attackerStats" class="aDifferentFightWindow">
 
                 </div>
-            </div>
-            <div id="attackButton"></div>
-            <div id="fight">
-                <action>
-
-                </action>    
-            </div>
-            <div id="winOrLose">
-
-            </div>
+                <div id="fightAction" class="aDifferentFightWindow">
+                    <button id="attack">Attack!</button>
+                    <div id="action"></div>
+                </div>
+            </div>    
         </div>
     </div>
     <script src="assets/javascript/game.js"></script>
